trunk/Archive2/30/95c5a760515663/output
main.cpp: In function 'void addp()':
main.cpp:94:11: error: could not convert '(RecAbbo*)(& Abbo)' from 'RecAbbo*' to 'RecAbbo'
  safe(Abbo);
           ^
